# ui-ux-coding-agent

./: README.md  pyproject.toml
src/coding_agent_ui/: __init__.py  cli.py
src/coding_agent_ui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/coding_agent_ui/agent_core/: agent.py  factory.py  llm.py  loop.py  policy.py  routing.py  state.py  telemetry.py
src/coding_agent_ui/agents/: __init__.py
src/coding_agent_ui/agents/base/: __init__.py  prompts.py  schemas.py
src/coding_agent_ui/agents/frontend/: __init__.py  policy.py  prompts.py  schemas.py
src/coding_agent_ui/config/: settings.py
src/coding_agent_ui/eval/: __init__.py  rubrics.py  runner.py  tasks.py
src/coding_agent_ui/retrieval/: __init__.py  context.py
src/coding_agent_ui/tools/: __init__.py  accessibility.py  base.py  command.py  fs.py  lint.py  preview.py  registry.py  repo.py  search.py  test.py
tests/: test_agent_loop.py  test_llm_provider.py  test_openai_adapter.py  test_partial_rollback.py  test_path_and_search.py  test_prompt_budgets.py  test_settings_validation.py  test_structured_output.py  test_validation_hooks.py  utils.py
