[project]
name = "coding-agent-ui"
version = "0.1.0"
description = "LangChain-based coding agent scaffold specialized for frontend UI/UX."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langchain-core>=0.2.0",
  "openai>=1.0.0",
  "pydantic>=2.7.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0"
]

[project.scripts]
coding-agent = "coding_agent_ui.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
